# On-Paper

./: .gitignore  LICENSE  README.md
On-Paper-neo/On-Paper/: ARCapturer.cpp  ARCapturer.h  GestureJudge.cpp  GestureJudge.h  HandDetector.cpp  HandDetector.h  LayerManager.h  On-Paper.pro  OnPaper.cpp  OnPaper.h  Painter.cpp  Painter.h  PaperFun.cpp  PaperFun.h  archiv.json  archiver.cpp  archiver.h  beforestart.cpp  beforestart.h  cvutils.h  defs.h  glcanvas.cpp  glcanvas.h  main.cpp  onpapermain.cpp  onpapermain.h  onpapermain.ui  optestingpanel.cpp  optestingpanel.h  optestingpanel.ui  pdfreader.cpp  pdfreader.h  resources.qrc
On-Paper-start/: On-Paper-start.pro  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ar_mask/: ARCapturer.cpp  ARCapturer.h  CMakeLists.txt  GestureJudge.cpp  GestureJudge.h  GesureJudge.cpp  GesureJudge.h  HandDetector.cpp  HandDetector.h  LayerManager.cpp  LayerManager.h  OnPaper.cpp  OnPaper.h  Painter.cpp  Painter.h  PaperFun.cpp  PaperFun.h  ToolBox.cpp  ToolBox.h  camera.yml  cvutils.h  img_name.txt  main.cpp  outdated.txt
artest/: CMakeLists.txt  ar_capturer.cpp  ar_capturer.h  main.cpp  outdated.txt
handmask/: handmask.sln
handmask/handmask/: CMakeLists.txt  HandDetector.cpp  HandDetector.h  handmask.vcxproj  handmask.vcxproj.filters  main.cpp
